@@ -6,6 +6,10 @@
             KDDCup item data
         - recommenders
           - make ItemRecommender and RatingPredictor clonable
+          - BiasedMatrixFactorization
+            - rename BiasRegularization to BiasReg for consistency with other
+              recommenders
+            - different regularization parameters for user and item factors
           - BPRMF:
             - get rid of unnecessary IterationLength parameter
             - only interate once over relevant data points in online learning
